# hours

./: Cargo.toml  Makefile  README.md
src/: display.rs  gist.rs  main.rs  remaining_work.rs  report.rs  settings.rs  terminal.rs  timesheet.rs  util.rs  working_days.rs
