[package]
name = "hours"
version = "0.1.0"
authors = ["ennm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossterm = "0.19.0"
ctrlc = "3.1.8"
reqwest = "0.11.2"
serde = "1.0.125"
num-traits = "0.2.12"
