[package]
name = "hours"
version = "0.1.0"
authors = ["ennm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossterm = "0.19.0"
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
num-traits = "0.2.12"
serde_yaml = "0.8.17"
tokio = { version = "1.5.0", features = ["rt", "macros"] }
serde_json = "1.0.64"
